# env-manager

./: .gitignore  .vault_master.key  ADVANCED_FEATURES.md  AUTOMATED_RELEASE_GUIDE.md  AUTO_SECRETS_AND_TELEGRAM.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  ENV_DEMO_AND_MIGRATION_GUIDE.md  EXCHANGE_LEVEL_FEATURES.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE_CARD.md  QUICK_START_ALL_FEATURES.md  README.md  README_UPDATE_SUMMARY.md  RUNNING_GUIDE.md  SECURE_ENV_GUIDE.md  SETUP_COMPLETE.md  TASK.MD  TEST_RESULTS_SUMMARY.md  VAULT_INTEGRATION_GUIDE.md  build-release.sh  config.toml  diagnose-release.sh  env-deeper.md-done  env-manager.md-done  env-manager.rb  env-protocol.md  execute-homebrew-setup.sh  password-lock.md  setup-homebrew.sh  sys-env.md-done
.github/workflows/: ci.yml  deploy.yml  release.yml
k8s/: deployment.yaml  namespace.yaml  service.yaml  vault-auth.yaml
src/: main.rs
src/config/: advanced.rs  loader.rs  mod.rs  schema.rs  validator.rs
src/demo/: mod.rs  web3_demo.rs
src/secrets/: dynamic_creds.rs  encrypted_cache.rs  hsm.rs  memory.rs  mod.rs  rotator.rs  threshold_signer.rs  vault.rs  web3_signer.rs  web3_signer_service.rs
src/secrets/self_vault/: access_control.rs  audit_trail.rs  dynamic_credentials.rs  mod.rs  secret_rotation.rs  (+2 more)
src/security/: access.rs  audit.rs  bridge_security.rs  emergency_shutdown.rs  leak_detector.rs  mod.rs  mtls.rs  policy_engine.rs  transaction_validator.rs  web3_policy_engine.rs
src/utils/: metrics.rs  mod.rs  secure_env.rs  telegram_notifier.rs  vault_manager.rs
