[package]
name = "secure-config"
version = "0.1.0"
edition = "2021"
description = "Production-grade secure configuration system with Vault integration"
authors = ["Your Name"]

[[bin]]
name = "env-manager"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = "0.14"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
zeroize = "1.7"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10"
lazy_static = "1.4"
sha2 = "0.10"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
